--- a/Week4/Caculator/caculator.html
+++ b/Week4/Caculator/caculator.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" /> <!-- Khai báo bộ ký tự -->
-  <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- Đảm bảo hiển thị tốt trên thiết bị di động -->
-  <title>Calculator</title> <!-- Tiêu đề trang -->
-  <link rel="stylesheet" href="styles.css"> <!-- Liên kết file CSS -->
+  <meta charset="UTF-8" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+  <title>Calculator</title>
+  <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
   <!-- Khối chính của máy tính -->
@@ -18,34 +18,29 @@
 
     <!-- Các phím bấm của máy tính -->
     <div class="keys">
-      <!-- Hàng đầu tiên: các phím chức năng -->
-      <button class="danger" data-action="clear">AC</button> <!-- Xóa toàn bộ -->
-      <button class="danger" data-action="delete">DEL</button> <!-- Xóa một ký tự -->
-      <button class="op" data-op="%">%</button> <!-- Phép chia lấy dư -->
-      <button class="op" data-op="/">÷</button> <!-- Phép chia -->
-
-      <!-- Hàng thứ hai: số 7-9 và phép nhân -->
+      
+      <button class="danger" data-action="clear">AC</button> 
+      <button class="danger" data-action="delete">DEL</button> 
+      <button class="op" data-op="%">%</button> 
+      <button class="op" data-op="/">÷</button> 
       <button data-num="7">7</button>
       <button data-num="8">8</button>
       <button data-num="9">9</button>
-      <button class="op" data-op="*">×</button> <!-- Phép nhân -->
+      <button class="op" data-op="*">×</button> 
 
-      <!-- Hàng thứ ba: số 4-6 và phép trừ -->
       <button data-num="4">4</button>
       <button data-num="5">5</button>
       <button data-num="6">6</button>
-      <button class="op" data-op="-">−</button> <!-- Phép trừ -->
+      <button class="op" data-op="-">−</button> 
 
-      <!-- Hàng thứ tư: số 1-3 và phép cộng -->
       <button data-num="1">1</button>
       <button data-num="2">2</button>
       <button data-num="3">3</button>
-      <button class="op" data-op="+">+</button> <!-- Phép cộng -->
+      <button class="op" data-op="+">+</button> 
 
-      <!-- Hàng cuối cùng: số 0, dấu chấm thập phân và dấu bằng -->
-      <button class="span-2" data-num="0">0</button> <!-- Số 0 chiếm 2 cột -->
-      <button data-action="dot">.</button> <!-- Dấu chấm thập phân -->
-      <button class="accent" data-action="equals">=</button> <!-- Phím bằng -->
+      <button class="span-2" data-num="0">0</button> 
+      <button data-action="dot">.</button> 
+      <button class="accent" data-action="equals">=</button> 
     </div>
 
   </div>
@@ -53,4 +48,5 @@
   <!-- Liên kết file JavaScript để xử lý logic máy tính -->
   <script src="js.js"></script>
 </body>
+
 </html>
